<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"

    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rate"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignStart="@+id/tv_tv"
        android:layout_alignEnd="@+id/tv_tv"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_star"
            android:layout_marginTop="@dimen/_16sdp"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:letterSpacing="0.1"
            android:gravity="center"
            android:text="@string/do_you_like_lie_detector"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:gravity="center"
            android:text="@string/rate_your_experience"
            android:textColor="@color/white"


            />

        <RatingBar
            android:id="@+id/rt_bar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:progressDrawable="@drawable/custom_star"
            android:rating="0"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_maybe_late"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/btn_maybe_late"
                android:text="@string/maybe_late"
                android:textColor="#99FFFFFF"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_15sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/btn_submit"
                android:text="@string/submit"
                android:textColor="#060D18"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/_20sdp"
                />
        </LinearLayout>
    </LinearLayout>





</RelativeLayout>