<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PermissionActivity"
    android:theme="@style/FullScreenTheme"
    android:background="@drawable/bg_permission">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/img_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/img_permission"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />
    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/_30sdp"
            />
    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            app:cardElevation="@dimen/_1sdp"
            app:cardBackgroundColor="#00000000"
            android:layout_marginHorizontal="@dimen/_16sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ll_content">

            <LinearLayout
                android:background="@drawable/bg_permit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_camera"
                   />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_switch_permission"
                    android:layout_weight="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permit_camera"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"

                    />

                <Switch
                    android:id="@+id/sw_permission"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:track="@drawable/bg_switch"
                    android:thumb="@drawable/switch_thumb"
                    android:outlineProvider="bounds"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_permission_granted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/permission_granted"
        android:textColor="#83FFF8"
        android:textStyle="italic"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_5sdp"
        android:visibility="invisible"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:layout_marginTop="@dimen/_48sdp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:background="@drawable/btn_continue"
        android:enabled="false"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_marginTop="@dimen/_16sdp"
        android:id="@+id/sw_permission1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>