<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:theme="@style/FullScreenTheme"
    android:background="@drawable/bg_fix_2x"
    app:layout_constraintVertical_bias="0"


    >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_home_tip"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentStart="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_tip_to_play"
            android:layout_marginTop="@dimen/_12sdp"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_24ssp"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            tools:ignore="RtlHardcoded"
            />
        <ImageView
            android:id="@+id/img_home_language"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_language"
            android:layout_marginTop="@dimen/_12sdp"
            />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragmentMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"/>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/test_bg_finger"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/btnFinger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">
            <ImageView
                android:id="@+id/imgFinger"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_16sdp"
                android:background="@drawable/ic_finger"
                android:importantForAccessibility="no" />
            <TextView
                android:id="@+id/tv_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="13sp"
                android:layout_marginStart="5sp"
                android:textColor="#83FFF8"
                android:text="@string/fingerprint"
                 />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn2Finger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_10sdp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables"
            >
            <ImageView
                android:id="@+id/img_2_player"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_2player"
                />

            <TextView
                android:id="@+id/tv_2_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_player"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textSize="13sp"
                android:layout_marginStart="5sp"
                android:marqueeRepeatLimit ="marquee_forever"
                android:textColor="#83FFF8"
                android:scrollHorizontally="true"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_eye"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_25sdp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">
            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_eye"
                />

            <TextView
                android:id="@+id/tv_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textSize="13sp"
                android:marqueeRepeatLimit ="marquee_forever"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="#83FFF8"
                android:scrollHorizontally="true"/>

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/bannerHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/guideline_bottom_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.084" />


</androidx.constraintlayout.widget.ConstraintLayout>